# aerotx-backend

./: .coveragerc  .env.example  .gitignore  README.md  docker-compose.yml  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: health.py  jobs.py  metrics.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py  security.py
backend/app/domain/: __init__.py  events.py
backend/app/infrastructure/: events.py
backend/app/infrastructure/resilience/: __init__.py  circuit_breaker.py
backend/app/infrastructure/storage/: __init__.py  local.py  s3.py
backend/app/models/: enums.py  event.py  job.py  risk_signal.py  summary.py  transaction.py
backend/app/ports/: __init__.py  event_publisher.py  llm.py  storage.py
backend/app/repositories/: event_repository.py  job_repository.py  summary_repository.py  transaction_repository.py
backend/app/schemas/: job.py  summary.py  transaction.py
backend/app/scripts/: check_db.py  fix_db.py
backend/app/services/cleaning/: __init__.py  engine.py
backend/app/services/job/: pipeline.py  stages.py
backend/app/tasks/: pipeline_tasks.py
backend/app/utils/: fingerprint.py
backend/app/workers/: __init__.py
backend/docker/: entrypoint.sh
backend/tests/: test_cleaning_engine.py  test_llm_response_validator.py  test_pipeline_refinements.py  test_resilience_and_ports.py  test_risk_engine.py  test_strategy_detectors.py
docs/: architecture.drawio
(+65 files in other folders)
