[project]
name = "ai-transaction-pipeline"
version = "0.1.0"
description = "Production-grade modular monolith for AI-powered transaction processing"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.3.0",
    "fastapi>=0.110.0",
    "flower>=2.0.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.34.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E402"]
